--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfólio — Jhonny Willy Bernardes</title>
-    <link rel="stylesheet" href="css/estilo.css" />
+    <link rel="stylesheet" href="estilo.css" />
     
     <style>
       html {
@@ -270,7 +270,8 @@
       <p>&copy; 2025 • Portfólio de Jhonny Willy Bernardes [ EXERCÍCIO ]</p>
     </footer>
 
-    <script src="js/script.js" defer></script>
+    <script src="script.js" defer></script>
     
   </body>
 </html>
+
